<resources>

    <string name="google_maps_key">AIzaSyAJUqzy0W87HwurLOVwiPdC_Qwdja_bKiA</string>

    <!-- Fixos -->
    <string name="app_name">Caronte</string>
    <string name="title_activity_maps">Caronte</string>
    <string name="title_activity_detalle_percorrido">Detalle percorrido</string>
    <string name="title_activity_detalle_poi">Detalle POI</string>

    <!-- Direccions SW -->
    <string name="direccion_servidor">http://ec2-34-241-173-6.eu-west-1.compute.amazonaws.com:8080/sw/museo/</string>
    <string name="direccion_servizo_recuperar_contas">contas</string>
    <string name="direccion_servizo_recuperar_contas_usuario">contas/{idUsuario}</string>
    <string name="direccion_servizo_comprobar_usuario_google">comprobarUsuarioGoogle</string>
    <string name="direccion_servizo_gardar_percorrido">percorrido/gardar</string>
    <string name="direccion_servizo_gardar_poi">poi/gardar</string>
    <string name="direccion_servizo_recuperar_percorridos">percorridosidexterno/{idEdificioExterno}</string>
    <string name="direccion_servizo_recuperar_pois">pois/{idEdificioExterno}</string>
    <string name="direccion_servizo_recuperar_puntos_interese_percorrido">ppi/{idPercorrido}</string>
    <string name="direccion_servizo_eliminar_poi">poi/eliminar/{idPoi}</string>
    <string name="direccion_servizo_eliminar_percorrido">percorrido/eliminar/{idPercorrido}</string>
    <string name="direccion_servizo_recuperar_datos_imaxe">imaxe/recuperar/{listaIdImaxeCSV}</string>

    <string name="direccion_servidor_imaxe">http://ec2-34-241-173-6.eu-west-1.compute.amazonaws.com:8080/sw/imaxe/</string>
    <string name="direccion_servizo_recuperar_imaxe">recuperar/{idEdificio}/{idPoi}/{idImaxe}</string>
    <string name="direccion_servizo_subir_imaxe">subir</string>
    <string name="direccion_servizo_actualizar_imaxe">actualizar/{idImaxe}/{nome}/{descricion}</string>
    <string name="direccion_servizo_eliminar_imaxe">eliminar/{idImaxe}</string>

    <string name="usuario_sw">CaronteSW</string>
    <string name="contrasinal_sw">aplicacion</string>

    <!-- Identificador do token de Caronte para a autenticacion en Google -->
    <string name="id_token_google_caronte">937334461735-5ld5hochfmdj5hour3tdh0cbigtobtjo.apps.googleusercontent.com</string>


    <!-- Texto -->
    <string name="abrir_menu_lateral">Abrir</string>
    <string name="pechar_menu_lateral">Pechar</string>

    <!-- Permisos -->
    <string name="permiso_motivo">O permiso de localización é necesario para poder situarse e guiarse a través dos museos.</string>
    <string name="permiso_necesario">O permiso de localización é necesario para a execución desta aplicación.</string>
    <string name="checkbox_mostrar_pois">Mostrar puntos de interese</string>
    <string name="boton_actualizar_descricion">Recargar compoñentes</string>
    <string name="logout">Logout</string>
    <string name="desconectar">Desconectar</string>
    <string name="acceder">Acceder</string>

    <string name="mensaxe_abandonar_edificio">Saímos do edificio</string>
    <string name="seleccionar_percorrido">Seleccionar percorrido</string>

    <string name="erro_conexion">Erro na conexión</string>
    <string name="accion_opcions">Opcións</string>
    <string name="accion_todos_pois">Mostrar todos os POIs</string>
    <string name="accion_selector_pois">Mostrar selector de POIs</string>
    <string name="accion_selector_percorridos">Mostrar selector de percorridos</string>
    <string name="seleccionar_poi">Seleccionar POI</string>
    <string name="marcador_non_localizado">Non se puido recuperar a ruta ata o punto seleccionado</string>
    <string name="boton_editar_descricion">Editar</string>
    <string name="direccion_servizo_recuperar_edificios">edificios</string>
    <string name="boton_detalle_percorrido">Mostrar os detalles do percorrido</string>
    <string name="boton_detalle_poi">Mostrar os detalles do POI</string>
    <string name="accion_crear_poi">Crear POI</string>
    <string name="accion_crear_percorrido">Crear percorrido</string>

    <string name="textview_nome">Nome:</string>
    <string name="edicion_nome">Nome</string>
    <string name="textview_descricion">Descrición:</string>
    <string name="edicion_descricion">Descrición</string>
    <string name="boton_gardar">Gardar</string>
    <string name="title_activity_inicio">Selección conta</string>
    <string name="sen_conta_google_selecionada">Sen conta Google selecionada</string>
    <string name="conta_seleccionada">Conta seleccionada:</string>
    <string name="accion_aceptar">Aceptar</string>
    <string name="accion_cancelar">Cancelar</string>
    <string name="situar_poi">Sitúe o POI</string>
    <string name="novo_poi">Novo POI</string>
    <string name="novo_percorrido">Novo percorrido</string>
    <string name="poi_repetido_percorrido">Non se pode escoller dúas veces o mesmo POI</string>
    <string name="poi_percorrido_eliminar_non_permitido">Non se pode borrar o POI porque o percorrido é moi curto</string>
    <string name="poi_seleccionar_imaxe">Seleccionar imaxe</string>


    <!-- Mensaxes ao eliminar -->
    <string name="eliminar_poi_erro">Erro ao intentar eliminar o punto de interese. Por favor, ténteo de novo</string>
    <string name="eliminar_poi_correcto">Punto de interese eliminado correctamente</string>
    <string name="eliminar_poi_en_percorrido">O punto de interese está incluido nalgún percorrido. Elimíneo primeiro dos seus percorridos</string>

    <string name="eliminar_percorrido_erro">Erro ao intentar eliminar o percorrido. Por favor, ténteo de novo</string>
    <string name="eliminar_percorrido_correcto">Percorrido eliminado correctamente</string>
    <string name="eliminar_imaxe_erro">Erro ao intentar eliminar a imaxe. Por favor, ténteo de novo</string>
    <string name="eliminar_imaxe_correcto">Imaxe eliminada correctamente</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="boton_centrar_posicion">Centrar posición</string>
    <string name="boton_percorrido_engadir_poi">Engadir un POI ao percorrido</string>
    <string name="ultima">Última</string>
    <string name="primeira">Primeira</string>
    <string name="eliminar_poi">Eliminar POI</string>
    <string name="textview_tempo_aproximado">Tempo aproximado (minutos):</string>
    <string name="ver_imaxe">Ver imaxe</string>
    <string name="subir_imaxe">Subir imaxe</string>
    <string name="textview_tempo_total">Tempo total (minutos):</string>
    <string name="textview_tempo_caminho">Tempo camiño (minutos):</string>


    <string name="comprobar_credenciais">Comprobando credenciais</string>
    <string name="usuario_logueado">Usuario logueado</string>
    <string name="usuario_non_logueado">Usuario non logueado</string>
    <string name="boton_iniciar_guiado">Iniciar guiado</string>
    <string name="boton_cancelar_guiado">Cancelar guiado</string>
    <string name="boton_seguinte">Seguinte</string>
    <string name="poi_seleccionar_opcion">Escoller opción</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="title_activity_datos_imaxe">Datos da imaxe</string>

    <string name="ficheiro_temporal">tmp.png</string>

</resources>
