<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="gal.caronte.activity.DetallePercorridoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarPercorrido"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:theme="@style/ToolBar" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarPercorrido"
        android:text="@string/textview_nome"
        android:textColor="@color/colorAccent"
        tools:text="@string/textview_nome" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewNome"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        tools:text="@string/edicion_nome" />

    <TextView
        android:id="@+id/textViewDescricion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextNome"
        android:text="@string/textview_descricion"
        android:textColor="@color/colorAccent"
        tools:text="@string/textview_descricion" />

    <EditText
        android:id="@+id/editTextDescricion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewDescricion"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        tools:text="@string/edicion_descricion" />

    <TextView
        android:id="@+id/textViewTempoCaminho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextDescricion"
        android:text="@string/textview_tempo_caminho"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editTextTempoCaminho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewTempoCaminho"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewTempoTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextTempoCaminho"
        android:text="@string/textview_tempo_total"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editTextTempoTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewTempoTotal"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:inputType="number"
        android:enabled="false"/>

    <Button
        android:id="@+id/buttonEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonGardar"
        android:text="@string/boton_eliminar"
        android:textColor="@color/colorPrimary"
        tools:text="@string/boton_eliminar" />

    <Button
        android:id="@+id/buttonGardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/boton_gardar"
        android:textColor="@color/colorPrimary"
        tools:text="@string/boton_gardar" />

</RelativeLayout>