<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context="gal.caronte.activity.InicioActivity">

    <TextView
        android:id="@+id/textViewCaronte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAccent"
        android:textSize="44sp"
        tools:text="@string/app_name" />

    <RelativeLayout
        android:id="@+id/lytBotons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewCaronte"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/boton_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/boton_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/logout"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewContaGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytBotons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/sen_conta_google_selecionada"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        tools:text="@string/sen_conta_google_selecionada" />

    <TextView
        android:id="@+id/textViewNomeContaGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewContaGoogle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        tools:text="@string/sen_conta_google_selecionada" />

    <RelativeLayout
        android:id="@+id/relativeLayoutSitum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNomeContaGoogle"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:id="@+id/textViewContaSitum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/conta_seleccionada"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            tools:text="@string/conta_seleccionada" />

        <Spinner
            android:id="@+id/spinner_contas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textViewContaSitum"
            android:color="@color/colorPrimary" />

    </RelativeLayout>

    <Button
        android:id="@+id/boton_acceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutSitum"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/acceder"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="40dp" />

</RelativeLayout>